Agregando tailwind css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="OralTech Clínica Dental" />
     <link rel="icon" type="image/svg+xml" href="/public/diente.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="./index.css" rel="stylesheet">
+    <link href="./src/App.css" rel="stylesheet">
     <title>OralTech Clínica Dental </title>
   </head>
   <body>
